import org.apache.tools.ant.filters.ReplaceTokens
plugins {
    id 'java'
}

group 'sh.chuu.mc.beaconshrine'
version '1.0-SNAPSHOT'

repositories {
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url = 'https://repo.codemc.org/repository/maven-public' }
    mavenLocal()
    mavenCentral()
}

dependencies {
    compileOnly('org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT')
    compileOnly('org.jetbrains:annotations:22.0.0')
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

processResources {
    filter ReplaceTokens, tokens:["version": project.version]
}
